# gated-deltanet-impl

./: .gitignore  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-28-gated-deltanet-recurrent.md
gated_deltanet/: __init__.py
gated_deltanet/torch/: gated_delta_chunkwise_torch.py  gated_delta_recurrent_torch.py  gated_deltanet_torch.py  plan.md
tests/: _fla_reference.py  conftest.py  helper.py  helpers.py  plan.md  test_gated_delta_chunkwise_torch.py  test_gated_delta_recurrent_torch.py
